changed package name from wkndevents to apple.

--- a/ui.apps/src/main/content/jcr_root/apps/apple/components/content/tagsearchpage/tagsearchpage.html
+++ b/ui.apps/src/main/content/jcr_root/apps/apple/components/content/tagsearchpage/tagsearchpage.html
@@ -1,5 +1,5 @@
 <h3>Apple Tag Search Page Component</h3>
- <div data-sly-use.tagSearch="${'com.apple.assignment.core.models.TagSearch'}">
+ <div data-sly-use.tagSearch="${'com.apple.assignment.core.models.TagSearchModel'}">
         <sly data-sly-list.pagePath="${tagSearch.PageList}">
 				<div>${pagePath}</div>
         </sly>
