Added breadcrumb and tag search to english page.

--- a/ui.apps/src/main/content/jcr_root/apps/apple/components/content/tagsearchpage/tagsearchpage.html
+++ b/ui.apps/src/main/content/jcr_root/apps/apple/components/content/tagsearchpage/tagsearchpage.html
@@ -1,4 +1,4 @@
-<h3>Apple Tag Search Page Component</h3>
+<h3>Apple AEM Assignment -> Breadcrumb and Tagsearch</h3>
  <div data-sly-use.tagSearch="${'com.apple.assignment.core.models.TagSearchModel'}">
         <sly data-sly-list.pagePath="${tagSearch.PageList}">
 				<div>${pagePath}</div>
