--- a/ui.apps/src/main/content/jcr_root/apps/apple/components/content/breadcrumb/breadcrumb.html
+++ b/ui.apps/src/main/content/jcr_root/apps/apple/components/content/breadcrumb/breadcrumb.html
@@ -13,6 +13,8 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/-->
+  <hr />
+<h4>Breadcrumb Component</h4>
 <nav class="cmp-breadcrumb"
      aria-label="${'Breadcrumb' @ i18n}"
      data-sly-use.breadcrumb="com.adobe.cq.wcm.core.components.models.Breadcrumb"
@@ -38,6 +40,8 @@
 </nav>
 <sly data-sly-call="${template.placeholder @ isEmpty=breadcrumb.items.size == 0, classAppend='cmp-breadcrumb'}"></sly>
 
+<hr />
+<h4>Tag Search Component</h4>
  <div data-sly-use.tagSearch="${'com.apple.assignment.core.models.TagSearchModel'}">
         <sly data-sly-list.pagePath="${tagSearch.PageList}">
 				<div>${pagePath}</div>
